<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="250dip"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.ben.qqnavigationdemo.view.CircleImageView
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_centerVertical="true"
                android:layout_margin="10dip"
                android:src="@drawable/hugh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/user_name"
                android:textSize="28sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Android Devoloper"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_head"
        android:orientation="vertical">

        <com.ben.qqnavigationdemo.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_crown"
            app:itemText="@string/get_more_about_member"/>

        <com.ben.qqnavigationdemo.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_wallet"
            app:itemText="@string/my_wallet"/>

        <com.ben.qqnavigationdemo.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_favourite"
            app:itemText="@string/my_favourite"/>

        <com.ben.qqnavigationdemo.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_photo"
            app:itemText="@string/my_photo"/>

        <com.ben.qqnavigationdemo.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_item"
            android:clickable="true"
            app:itemSrc="@drawable/menu_item_folder"
            app:itemText="@string/my_folder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/menu_item_setting"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip"
            android:text="@string/setting"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/menu_item_moon"
            android:drawablePadding="5dip"
            android:gravity="center_vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip"
            android:text="@string/night"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>
