<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ben.qqnavigationdemo.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--Title-->
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <com.ben.qqnavigationdemo.view.CircleImageView
            android:id="@+id/civ_head"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:src="@drawable/hugh"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:src="@drawable/ic_add_black_42dp"/>

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="@string/more"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"/>

        <!--Line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/gray"/>

        <!--<android.support.v4.app.FragmentTabHost-->
            <!--android:id="@android:id/tabhost"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingRight="10dip"/>-->
        <com.ben.qqnavigationdemo.view.FragmentTabHost
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"/>
    </LinearLayout>
</LinearLayout>
